--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,56 +3,60 @@ html {
     line-height: 1.4;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    border-top: 10px solid;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
 ::selection {
     background: #b3d4fc;
     text-shadow: none;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-    background-color: #C42B3A;
-    color: #FFE8D1;
-
-    display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+.button {
+    padding: .5rem;
+    display: inline-block;
+    border: 2px solid;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .2s;
 }
 
-.Site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+.button:hover {
+    border: 2px solid;
+    background-color: transparent;
 }
 
-.Site-content {
-  flex: 1;
+.button.hollow {
+    border: 2px solid;
+    background-color: transparent;
 }
 
 .main-content {
     flex: 1;
 }
 
-.quote,
-.actions {
+.footer {
+    margin-top: 3rem;
+    background-color: rgba(0, 0, 0, 0.05);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: #efefef;
+}
+
+.quote {
     width: 60%;
-    margin: 0 auto;
+    margin: 7rem auto 5rem auto;
 }
 
 .quote-text {
     font-size: 3rem;
-    line-height: 1;
+    line-height: 1.25;
 }
 
 .quote-attribution {
@@ -66,35 +70,17 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
     transition: all .5s;
     text-decoration: none;
+    text-transform: none;
 }
 
-.quote-link:hover {
-    background-color: rgba(0, 0, 0, 0.74);
-}
-
-.footer-main {
-    background-color: rgba(0, 0, 0, 0.18);
-    padding: 2rem 1rem;
+.actions {
+    width: 60%;
+    margin: 0 auto;
+    border-top: 3px solid;
     text-align: center;
-    color: #efefef;
 }
 
-
-a.button {
-    padding: .5rem;
-    display: inline-block;
-    border: 2px solid #9ce4c0;
-    background-color: #9ce4c0;
-    color: #28504d;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all .2s;
-}
-
-a.button:hover {
-    background-color: transparent;
-}
-
-.new-quote {
-    text-align: center;
+.actions p {
+    margin-top: 3rem;
+    font-weight: bold;
 }
