--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -68,7 +68,7 @@
         </style>
     </head>
 
-    <body>
+    <body data-font="{{ font }}" data-color-one="{{ color_one }}" data-color-two="{{ color_two }}">
         <main class="main-content">
             <blockquote class="quote">
                 <p id="js-quote-text" class="quote-text">{{ quote.quoteText }}</p>
@@ -101,29 +101,64 @@
             </p>
         </footer>
 
-        <!-- Scritps! -->
+        <!-- Scripts! -->
         <script>
-            console.log('hi');
+            // console.log('hi');
 
-            var pokeApiUrl = 'http://pokeapi.co/api/v2/ability/4/';
-            var randoma11yUrl = 'http://www.randoma11y.com/stats/';
-            var forismaticUrl = 'https://crossorigin.me/http://api.forismatic.com/api/1.0/?method=getQuote&lang=en&format=json';
-
-            var quoteText = document.getElementById('js-quote-text');
-            var quoteAuthor = document.getElementById('js-quote-author');
-            var quoteLink = document.getElementById('js-quote-link');
-
-            // for each function.
-            var forEach = function (array, callback, scope) {
+            /**
+             * foreach function for querySelectorAll elements.
+             */
+            function forEach(array, callback, scope) {
               for (var i = 0; i < array.length; i++) {
                 callback.call(scope, i, array[i]); // passes back stuff we need
               }
             };
 
+            function contains(arr, v) {
+                for(var i = 0; i < arr.length; i++) {
+                    if(arr[i] === v) return true;
+                }
+                return false;
+            };
+
+            function unique(str) {
+                var arr = [];
+                for(var i = 0; i < str.length; i++) {
+                    if(!contains(arr, str[i])) {
+                        arr.push(str[i]);
+                    }
+                }
+                return arr;
+            }
+
+            // Set default font.
+            var font = document.querySelector('body').getAttribute('data-font');
+            var requestType = '';
+
+            var pokeApiUrl = 'http://pokeapi.co/api/v2/ability/4/';
+            var randoma11yUrl = 'http://www.randoma11y.com/stats/';
+            var forismaticUrl = 'https://crossorigin.me/http://api.forismatic.com/api/1.0/?method=getQuote&lang=en&format=json';
+
+            // var favsUrl = 'https://favqs.com/api/quotes';
+            // var favsToken = 'c518ff9cd8895ad60675ccd57ed4fe8b';
+
+            var fontsUrl = '/src/font-list.json';
+
+            var combos = 113592;
+            var colorsURL = 'http://www.randoma11y.com/stats/';
+            var colorsPageURL = 'http://randoma11y.com/combos?';
+
+
+            var quoteText = document.getElementById('js-quote-text');
+            var quoteAuthor = document.getElementById('js-quote-author');
+            var quoteLink = document.getElementById('js-quote-link');
+
+
+
             var buttons = document.querySelectorAll('.button');
 
             forEach(buttons, function (index, value) {
-              console.log(index, value); // passes index + value back!
+            //   console.log(index, value); // passes index + value back!
               buttons[index].addEventListener('click', function(e){ //say this is an anchor
                        //do something
                       e.preventDefault();
@@ -132,25 +167,28 @@
 
 
             var newFont = document.getElementById('js-new-font');
-            console.log(newFont);
+            // console.log(newFont);
             newFont.addEventListener('click', function(e) {
-                // callOtherDomain();
+                requestType = 'font';
+                callOtherDomain( fontsUrl );
             });
+
 
 
             var newQuote = document.getElementById('js-new-quote');
-            console.log(newQuote);
+            // console.log(newQuote);
             newQuote.addEventListener('click', function(e) {
-                // fetchNewQuote();
+                requestType = 'quote';
                 callOtherDomain( forismaticUrl );
             });
 
+            var newColors = document.getElementById('js-new-colors');
+            // console.log(newQuote);
+            newColors.addEventListener('click', function(e) {
+                requestType = 'colors';
+                callOtherDomain( colorsPageURL );
+            });
 
-
-            var fetchNewQuote = function () {
-                // var response = callOtherDomain( forismaticUrl );
-                console.log(invocation.responseText);
-            };
 
 
 
@@ -165,22 +203,108 @@
             }
 
             function handler( evtXHR ) {
-                console.log(invocation.status);
+                // console.log(invocation.status);
 
-                if (invocation.readyState == 4) {
-                    if (invocation.status == 200) {
-                        // console.log(invocation.responseText);
-                        // return invocation.responseText;
-                        fetchNewQuote();
+                if (invocation.readyState === XMLHttpRequest.DONE) {
+                    if (invocation.status === 200) {
+
+                        // var response = invocation.responseText;
+                        // response = response.replace('\'', ''); // todo figure this out.....
+                        // console.log(response);
+                        // response = JSON.parse(response);
+
+                        var response = JSON.parse(invocation.responseText.replace("\\'", "'"));
+                        // console.log(response);
+
+                        switch (requestType) {
+                            case 'quote':
+                                quoteText.innerHTML = response.quoteText;
+                                quoteAuthor.innerHTML = response.quoteAuthor;
+                                getNewFont();
+                                break;
+
+                            case 'font':
+                                var numFonts = response.items.length;
+                                font = response.items[getRandomInt(0, numFonts)].family;
+                                getNewFont();
+                                break;
+
+                            case 'colors':
+                                console.log(response);
+                                var numPairs = response.length;
+                                var pair = response[getRandomInt(0, numPairs)];
+                                var colorOne = pair.color_one;
+                                var colorTwo = pair.color_two;
+                                console.log(colorOne);
+                                console.log(colorTwo);
+                                break;
+
+                            default:
+                                alert('No request type set.');
+                                break;
+                        }
+
+
+                        // quote = response;
+
                     } else {
-                        console.log('Invocation Errors Occured');
-                        // return false;
+                        alert('There was a problem with the request.');
                     }
                 }
+
             }
 
 
-            // callOtherDomain();
+            function getNewFont(response) {
+                console.log(response);
+                // console.log(response.items.length);
+                console.log(font);
+                loadFont(font);
+                quoteText.style.fontFamily = font;
+            }
+
+
+            function getUniqueChars() {
+                console.log(quoteText.innerHTML);
+                console.log(unique(quoteText.innerHTML).join(''));
+                return unique(quoteText.innerHTML).join('');
+            }
+
+
+            // Load a Google font by name.
+            function loadFont(font) {
+              WebFontConfig = {
+                  google: {
+                    families: [font],
+                    text: getUniqueChars()
+                  },
+                  timeout: 2000 // Set the timeout to two seconds
+                };
+
+              (function(d) {
+                  var wf = d.createElement('script'), s = d.scripts[0];
+                  wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
+                  s.parentNode.insertBefore(wf, s);
+               })(document);
+            };
+
+
+            /**
+             * Returns a random integer between min (included) and max (included)
+             * Using Math.round() will give you a non-uniform distribution!
+             * @link https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random#Examples
+             */
+            function getRandomInt(min, max) {
+              min = Math.ceil(min);
+              max = Math.floor(max);
+              return Math.floor(Math.random() * (max - min)) + min;
+            }
+
+
+
+
+
+
         </script>
     </body>
 </html>
