Convert JS to module pattern

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -104,5 +104,8 @@
         </footer>
 
         <script src="js/main.js" async></script>
+        <script>
+            App.init();
+        </script>
     </body>
 </html>
