Working on color variables

--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -16,9 +16,9 @@
             :root {
               --colorone: #{{ color_one }};
               --colortwo: #{{ color_two }};
-              --font: {{ font }};
-              /*--blur: 10px;*/
+              --font: '{{ font }}';
             }
+
             .quote-text {
                 font-family: var(--font);
             }
