--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -8,8 +8,110 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family={{ font }}&text={{ unique_chars }}&subset=latin">
+
+        <!-- Main CSS. -->
+        <style>
+            html {
+                font-size: 1em;
+                line-height: 1.4;
+            }
+
+            body {
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                min-height: 100vh;
+                border-top: 10px solid;
+                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+                transition: background-color .3s;
+            }
+
+            ::selection {
+                text-shadow: none;
+            }
+
+            .button {
+                padding: .5rem;
+                display: inline-block;
+                border: 2px solid;
+                text-decoration: none;
+                text-transform: uppercase;
+                transition: all .2s;
+            }
+
+            .button:hover,
+            .button.hollow {
+                border: 2px solid;
+                background-color: transparent;
+            }
+
+            .main-content {
+                flex: 1;
+            }
+
+            .footer {
+                margin-top: 3rem;
+                background-color: rgba(0, 0, 0, 0.05);
+                padding: 2rem 1rem;
+                text-align: center;
+                color: #efefef;
+            }
+
+            .quote, #quote {
+                width: 60%;
+                margin: 0 auto 5rem auto;
+            }
+
+            .quote-text {
+                font-size: 3rem;
+                line-height: 1.25;
+                opacity: 1;
+                transition: opacity .3s;
+            }
+
+            .wf-loading .quote-text {
+                opacity: 0;
+            }
+
+            .quote-text.loading {
+                opacity: 0;
+            }
+
+            .quote-attribution {
+                text-align: right;
+                font-size: 1.5rem;
+            }
+
+            .quote-link {
+                color: #fefefe;
+                padding: .5rem .5rem;
+                background-color: rgba(0, 0, 0, 0.3);
+                transition: all .5s;
+                text-decoration: none;
+                text-transform: none;
+            }
+
+            .actions {
+                width: 60%;
+                margin: 0 auto;
+                text-align: center;
+            }
+
+            .actions p {
+                margin-top: 3rem;
+                font-weight: bold;
+            }
+
+            .actions-top {
+                padding: 1.5rem 0;
+            }
+
+            .actions-bottom {
+                border-top: 3px solid;
+            }
+        </style>
 
         <!-- Starting Dynamic CSS. -->
         <style>
@@ -45,7 +147,6 @@
             .button:hover,
             .button.hollow {
                 border-color: #{{ color_two }};
-
             }
 
             a:hover,
@@ -58,25 +159,27 @@
         </style>
     </head>
 
-    <body data-font="{{ font }}" data-color-one="{{ color_one }}" data-color-two="{{ color_two }}">
+    <body data-colorone="{{ color_one }}" data-colortwo="{{ color_two }}" data-font="{{ font }}">
+        <div class="actions actions-top">
+            <!--<p>Generate quote with:</p>-->
+            <a id="js-new-font" class="button hollow" href="{{ quoteLink.font }}">New Font</a>
+            <a id="js-new-colors" class="button hollow" href="{{ quoteLink.colors }}">New Colors</a>
+            <a id="js-new-quote" class="button hollow" href="{{ quoteLink.quote }}">New Quote</a>
+        </div>
+
         <main class="main-content">
-            <blockquote class="quote">
+            <blockquote id="quote">
                 <p id="js-quote-text" class="quote-text">{{ quote.quoteText }}</p>
                 <footer class="quote-attribution">
                     <cite>
-                        <a id="js-quote-link" class="button" href="{{ quote.quoteLink }}">
-                            <span id="js-quote-author" class="quote-author">— {{ quote.quoteAuthor }}</span>
+                        <a id="js-quote-link" class="button" href="http://forismatic.com/en/{{ quote.quoteLink }}">
+                            <span id="js-quote-author" class="quote-author">{{ quote.quoteAuthor }}</span>
                         </a>
                     </cite>
                 </footer>
             </blockquote>
 
-            <div class="actions">
-                <p>Generate quote with:</p>
-                <a id="js-new-font" class="button hollow" href="{{ quoteLink.font }}">New Font</a>
-                <a id="js-new-colors" class="button hollow" href="{{ quoteLink.colors }}">New Colors</a>
-                <a id="js-new-quote" class="button hollow" href="{{ quoteLink.quote }}">New Quote</a>
-
+            <div class="actions actions-bottom">
                 <p>What do you think about this accessible color combination?</p>
                 <a id="js-colors-vote-link" class="button" href="http://randoma11y.com/#/?hex={{ color_one }}&compare={{ color_two }}">Vote on these colors</a>
             </div>
